unpackaged/main/default/objects/ServiceAppointment/fields/a_ActEndGeo__c.field-meta.xml
<CustomField>
    <fullName>a_ActEndGeo__c</fullName>
    <inlineHelpText>La dernière Géolocation connue de la ressource au moment de fin de l&apos;intervention.</inlineHelpText>
    <label>Eff fin Geolocation</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>