unpackaged/main/default/objects/ServiceAppointment/fields/a_ActEndGeoTimestamp__c.field-meta.xml
<CustomField>
    <fullName>a_ActEndGeoTimestamp__c</fullName>
    <inlineHelpText>Date, heure des données de la Géolocation de la ressource au moment de fin de l&apos;intervention.</inlineHelpText>
    <label>Eff fin validité de GeoData</label>
    <type>DateTime</type>
</CustomField>