unpackaged/main/default/objects/ServiceAppointment/fields/a_ActEndLat__c.field-meta.xml
<CustomField>
    <fullName>a_ActEndLat__c</fullName>
    <inlineHelpText>La dernière Latitude connue de la ressource au moment de fin de l&apos;intervention.</inlineHelpText>
    <label>Eff fin Latitude</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>