unpackaged/main/default/objects/ServiceAppointment/fields/a_ActEndLong__c.field-meta.xml
<CustomField>
    <fullName>a_ActEndLong__c</fullName>
    <inlineHelpText>La dernière Longitude connue de la ressource au moment de fin de l&apos;intervention.</inlineHelpText>
    <label>Eff fin Longitude</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>