unpackaged/main/default/objects/ServiceAppointment/fields/a_ActStartGeo__c.field-meta.xml
<CustomField>
    <fullName>a_ActStartGeo__c</fullName>
    <inlineHelpText>La dernière Géolocation connue de la ressource au moment de début de l&apos;intervention.</inlineHelpText>
    <label>Eff début Geolocation</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>