unpackaged/main/default/objects/ServiceAppointment/fields/a_ActStartGeoTimestamp__c.field-meta.xml
<CustomField>
    <fullName>a_ActStartGeoTimestamp__c</fullName>
    <inlineHelpText>Date, heure des données de la Géolocation de la ressource au moment de début de l&apos;intervention.</inlineHelpText>
    <label>Eff début validité de GeoData</label>
    <type>DateTime</type>
</CustomField>