unpackaged/main/default/objects/ServiceAppointment/fields/a_ActStartLat__c.field-meta.xml
<CustomField>
    <fullName>a_ActStartLat__c</fullName>
    <inlineHelpText>La dernière Latitude connue de la ressource au moment de début de l&apos;intervention.</inlineHelpText>
    <label>Eff début Latitude</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>