unpackaged/main/default/objects/ServiceAppointment/fields/a_ActStartLong__c.field-meta.xml
<CustomField>
    <fullName>a_ActStartLong__c</fullName>
    <inlineHelpText>La dernière Longitude connue de la ressource au moment de début de l&apos;intervention.</inlineHelpText>
    <label>Eff début Longitude</label>
    <precision>12</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>