unpackaged/main/default/objects/ServiceAppointment/fields/a_EffEndUser__c.field-meta.xml
<CustomField>
    <fullName>a_EffEndUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Utilisateur qui a quittancé la fin de l&apos;intervention par l&apos;application Mobile.</inlineHelpText>
    <label>Eff fin User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Appointments_End</relationshipName>
    <type>Lookup</type>
</CustomField>