unpackaged/main/default/objects/ServiceAppointment/fields/a_EffStartUser__c.field-meta.xml
<CustomField>
    <fullName>a_EffStartUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Utilisateur qui a quittancé le début de l&apos;intervention par l&apos;application Mobile.</inlineHelpText>
    <label>Eff début User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Appointments_Start</relationshipName>
    <type>Lookup</type>
</CustomField>