unpackaged/main/default/objects/ServiceAppointment/fields/a_Patient__c.field-meta.xml
<CustomField>
    <fullName>a_Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>