unpackaged/main/default/objects/ServiceAppointment/fields/FSL__Emergency__c.field-meta.xml
<CustomField>
    <fullName>FSL__Emergency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency</label>
    <type>Checkbox</type>
</CustomField>