unpackaged/main/default/objects/ServiceAppointment/fields/FSL__Gantt_Display_Date__c.field-meta.xml
<CustomField>
    <fullName>FSL__Gantt_Display_Date__c</fullName>
    <label>Gantt Display Date</label>
    <type>DateTime</type>
</CustomField>