unpackaged/main/default/objects/ServiceAppointment/fields/FSL__GanttIcon__c.field-meta.xml
<CustomField>
    <fullName>FSL__GanttIcon__c</fullName>
    <inlineHelpText>Enter a URL for an icon. The URL must end in an image suffix, such as .png.</inlineHelpText>
    <label>Gantt Icon</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>