unpackaged/main/default/objects/ServiceAppointment/fields/FSL__InJeopardy__c.field-meta.xml
<CustomField>
    <fullName>FSL__InJeopardy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Jeopardy</label>
    <type>Checkbox</type>
</CustomField>