unpackaged/main/default/objects/ServiceAppointment/fields/FSL__IsMultiDay__c.field-meta.xml
<CustomField>
    <fullName>FSL__IsMultiDay__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is MultiDay</label>
    <type>Checkbox</type>
</CustomField>