unpackaged/main/default/objects/ServiceAppointment/fields/FSL__Related_Service__c.field-meta.xml
<CustomField>
    <fullName>FSL__Related_Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Service</label>
    <referenceTo>ServiceAppointment</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>