unpackaged/main/default/objects/ServiceAppointment/fields/FSL__Same_Resource__c.field-meta.xml
<CustomField>
    <fullName>FSL__Same_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same Resource</label>
    <type>Checkbox</type>
</CustomField>