unpackaged/main/default/objects/ServiceAppointment/fields/FSL__Schedule_Mode__c.field-meta.xml
<CustomField>
    <fullName>FSL__Schedule_Mode__c</fullName>
    <label>Schedule Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Optimization</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>