unpackaged/main/default/objects/ServiceAppointment/fields/FSL__Scheduling_Policy_Used__c.field-meta.xml
<CustomField>
    <fullName>FSL__Scheduling_Policy_Used__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scheduling Policy Used</label>
    <referenceTo>FSL__Scheduling_Policy__c</referenceTo>
    <relationshipLabel>Service Appointments</relationshipLabel>
    <relationshipName>Service_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>