unpackaged/main/default/objects/ServiceAppointment/fields/FSL__Time_Dependency__c.field-meta.xml
<CustomField>
    <fullName>FSL__Time_Dependency__c</fullName>
    <label>Time Dependency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same Start</fullName>
            </value>
            <value>
                <fullName>Start After Finish</fullName>
            </value>
            <value>
                <fullName>Finish Before Start</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>